[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/hud/hud_level/HUDLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/enemies/enemy_spikeball_placeholder.png" type="Texture" id=2]

[node name="HUDLevel" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BackgroundMenu" type="Panel" parent="."]
margin_left = 23.0
margin_top = 6.0
margin_right = 249.0
margin_bottom = 412.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevel" type="Button" parent="BackgroundMenu"]
margin_left = 37.0
margin_top = 30.0
margin_right = 192.0
margin_bottom = 128.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeLevel" type="Button" parent="BackgroundMenu"]
margin_left = 38.0
margin_top = 162.0
margin_right = 193.0
margin_bottom = 254.0
text = "Change level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="BackgroundMenu"]
margin_left = 41.0
margin_top = 281.0
margin_right = 191.0
margin_bottom = 379.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundInventory" type="Panel" parent="."]
margin_left = 1625.68
margin_top = 29.0112
margin_right = 1858.68
margin_bottom = 435.011
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="BackgroundInventory"]
margin_left = 23.4946
margin_top = 50.3784
margin_right = 65.4946
margin_bottom = 90.3784
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="TextureRect" parent="BackgroundInventory"]
margin_left = 21.7129
margin_top = 185.795
margin_right = 63.7129
margin_bottom = 225.795
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="Label" parent="BackgroundInventory"]
margin_left = 131.0
margin_top = 68.4863
margin_right = 202.0
margin_bottom = 122.486
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyCount" type="Label" parent="BackgroundInventory"]
margin_left = 134.564
margin_top = 196.776
margin_right = 205.564
margin_bottom = 250.776
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackgroundMenu/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="BackgroundMenu/ChangeLevel" to="." method="_on_ChangeLevel_pressed"]
[connection signal="pressed" from="BackgroundMenu/Quit" to="." method="_on_Quit_pressed"]
